--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix my-cise-mern-book-app npm run build --prefix my-cise-mern-book-app",
     "app": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
